FIx profile picture appearing too tall in author.html

--- a/user/user.css
+++ b/user/user.css
@@ -532,3 +532,18 @@ a:active { text-decoration: none; }
     bottom: 0px;
 }
 
+@media screen and (max-width: 500px) 
+{
+    .brandIcon{
+        display: none;
+    }
+    .brandName{
+        font-size: 13px;
+    }
+    .search-icon{
+        width: 15px;
+    }
+    .bar{
+        width: 40%;
+    }
+}
